--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/Nathanmaas/pennypost/issues"
   },
-  "homepage": "https://github.com/Nathanmaas/pennypost#readme"
+  "homepage": "https://github.com/Nathanmaas/pennypost#readme",
+  "dependencies": {
+    "angular": "^1.4.7",
+    "angular-route": "^1.4.7",
+    "express": "^4.13.3"
+  }
 }
