added cookies and logout

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "angular": "^1.4.7",
     "angular-route": "^1.4.7",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "instagram-node": "^0.5.8"
   }
