--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "angular": "^1.4.7",
     "angular-route": "^1.4.7",
+    "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
-    "instagram-node": "^0.5.8"
+    "instagram-node": "^0.5.8",
+    "lob": "^3.5.0"
   }
 }
